--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
   },
   "devDependencies": {
     "@csstools/postcss-nesting-experimental": "2.0.0",
-    "@testing-library/dom": "^9.0.1",
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "@vitest/coverage-c8": "^0.29.2",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitest/coverage-v8": "^0.32.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-config-standard": "^17.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-testing-library": "^5.10.2",
+    "eslint-plugin-testing-library": "^5.11.0",
     "htmlhint": "^1.1.4",
-    "jsdom": "^21.1.1",
-    "postcss": "8.4.21",
+    "jsdom": "^22.1.0",
+    "postcss": "8.4.24",
     "postcss-cli": "10.1.0",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^2.8.4",
-    "stylelint": "^15.2.0",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.7.0",
     "stylelint-config-idiomatic-order": "^9.0.0",
-    "stylelint-config-standard": "^30.0.1",
-    "vite": "^4.1.0"
+    "stylelint-config-standard": "^33.0.0",
+    "vite": "^4.3.9"
   }
 }
